fix(scp_byo): Some fixes for new MC and Java version